# Pulsarr

./: .gitignore  README.md
.github/workflows/: docker-image-develop.yml
PulsarrApp/PulsarrApp/: ContentView.swift  Item.swift  PulsarrAppApp.swift
PulsarrApp/PulsarrApp.xcodeproj/: project.pbxproj
PulsarrApp/PulsarrAppTests/: PulsarrAppTests.swift
PulsarrApp/PulsarrAppUITests/: PulsarrAppUITests.swift  PulsarrAppUITestsLaunchTests.swift
docs/Writerside/: pd.tree
pulsarrIOS/: pulsarr_swagger.json
pulsarrIOS/PULSARR/: TestView.swift  Theme.swift
pulsarrIOS/PULSARR.xcodeproj/: project.pbxproj
pulsarrIOS/pulsarrIOS/: ContentView.swift  Persistence.swift  pulsarrIOSApp.swift
pulsarrIOS/pulsarrIOS.xcodeproj/: project.pbxproj
pulsarrIOS/pulsarrIOSTests/: pulsarrIOSTests.swift
pulsarrIOS/pulsarrIOSUITests/: pulsarrIOSUITests.swift  pulsarrIOSUITestsLaunchTests.swift
pulsarr_fulcrum/: .dockerignore  Cargo.toml  Dockerfile  README.Docker.md  build.rs  docker-compose.yml
pulsarr_fulcrum/.cargo/: config.toml
pulsarr_fulcrum/db/migrations/: 20240427143943_init.sql
pulsarr_fulcrum/src/: api.rs  data.rs  error.rs  main.rs
pulsarr_fulcrum/src/api/: group.rs  rating.rs  rating_system.rs  user.rs
pulsarr_fulcrum/src/data/: data_wrangler.rs  models.rs
pulsarr_fulcrum/src/data/models/: pulsarr_group.rs  pulsarr_user.rs  rating.rs  rating_detail.rs  rating_system.rs  rating_system_parameter.rs
pulsarr_fulcrum/src/models/: pulsarr_group.rs  pulsarr_user.rs  rating.rs  rating_detail.rs  rating_system.rs  rating_system_parameter.rs
(+26 files in other folders)
