[package]
name = "pulsarr_fulcrum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", default-features = false, features=["rt-multi-thread"] }
sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio", "macros", "postgres", "migrate", "rust_decimal"]}
schemars = { version = "0.8.16", features = ["rust_decimal"] } 
rocket_okapi = { version = "0.8.0", features = ["swagger"] }
rocket = { version = "0.5.0", default-features = false, features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"